// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: <Button /> Next: should mount without exploding 1`] = `
<Button
  className="next"
  fn={[Function]}
  text="Next"
>
  <button
    className="jsx-383770121 next"
    onClick={[Function]}
  >
    Next
    <JSXStyle
      css="button.jsx-383770121{background-color:#734D84;border:none;box-shadow:2px 2px 2px #A974C2;color:#B0BF6C;font-family:\\"Kalam\\", cursive;font-size:1.5em;-webkit-letter-spacing:5px;-moz-letter-spacing:5px;-ms-letter-spacing:5px;letter-spacing:5px;margin:0.5em 0.25em 0 0.25em;outline:none;padding:0.25em;width:50%;}"
      styleId="383770121"
    />
  </button>
</Button>
`;

exports[`Component: <Button /> Reset: should mount without exploding 1`] = `
<Button
  className="reset"
  fn={[Function]}
  text="Reset"
>
  <button
    className="jsx-383770121 reset"
    onClick={[Function]}
  >
    Reset
    <JSXStyle
      css="button.jsx-383770121{background-color:#734D84;border:none;box-shadow:2px 2px 2px #A974C2;color:#B0BF6C;font-family:\\"Kalam\\", cursive;font-size:1.5em;-webkit-letter-spacing:5px;-moz-letter-spacing:5px;-ms-letter-spacing:5px;letter-spacing:5px;margin:0.5em 0.25em 0 0.25em;outline:none;padding:0.25em;width:50%;}"
      styleId="383770121"
    />
  </button>
</Button>
`;

exports[`Component: <Button /> Start: should mount without exploding 1`] = `
<Button
  className="start"
  fn={[Function]}
  text="Start"
>
  <button
    className="jsx-383770121 start"
    onClick={[Function]}
  >
    Start
    <JSXStyle
      css="button.jsx-383770121{background-color:#734D84;border:none;box-shadow:2px 2px 2px #A974C2;color:#B0BF6C;font-family:\\"Kalam\\", cursive;font-size:1.5em;-webkit-letter-spacing:5px;-moz-letter-spacing:5px;-ms-letter-spacing:5px;letter-spacing:5px;margin:0.5em 0.25em 0 0.25em;outline:none;padding:0.25em;width:50%;}"
      styleId="383770121"
    />
  </button>
</Button>
`;

exports[`Component: <Button /> Stop: should mount without exploding 1`] = `
<Button
  className="stop"
  fn={[Function]}
  text="Stop"
>
  <button
    className="jsx-383770121 stop"
    onClick={[Function]}
  >
    Stop
    <JSXStyle
      css="button.jsx-383770121{background-color:#734D84;border:none;box-shadow:2px 2px 2px #A974C2;color:#B0BF6C;font-family:\\"Kalam\\", cursive;font-size:1.5em;-webkit-letter-spacing:5px;-moz-letter-spacing:5px;-ms-letter-spacing:5px;letter-spacing:5px;margin:0.5em 0.25em 0 0.25em;outline:none;padding:0.25em;width:50%;}"
      styleId="383770121"
    />
  </button>
</Button>
`;
